# LifelongLERFROS

./: .gitignore  README.md  env_setup.bash  publish_static_transforms.sh  requirements.txt  run_navigation.sh  uncompress_streamed_images.sh
camera_bringup/: CMakeLists.txt  package.xml
camera_bringup/config/: camera_info0.yaml  camera_info1.yaml  camera_info2.yaml  camera_info3.yaml  params0.yaml  params1.yaml  params2.yaml  params3.yaml  params_test.yaml
camera_bringup/launch/: 4_camera_launch.py  full_compression_converter.launch.py  image_visualization.launch.py  nerf_collection.launch.py  nerf_collection_pose.launch.py  realsense_compression.launch.py
camera_bringup/scripts/: 3_arducam_compressed_converter.py  3_arducam_compressed_converter_test.py  3_arducam_compressed_cv2.py  4_arducam_compressed_converter.py  arducam_left_compressed_converter.py  arducam_right_compressed_converter.py  aruco_detector_node.py  aruco_pose_calc_node.py  calibrate_extrinsics_node.py  collect_images_for_nerf.py  color_image_compression_node.py  compare_arucos.py  compress_realsense_node.py  cv_calibration_python.py  find_relative_cam_poses.py  fisheye_calibration.py  get_aruco_pose_node.py  normal_calibration.py  (+13 more)
camera_calib/: calib.py  calib_from_video_stream.py  capture_chessboard.py  results.txt
colmap_calibration_setup/: CMakeLists.txt  package.xml
droid_slam_ros/: CMakeLists.txt  cache.info  demo.py  depth.pt  depth0.npy  image0.npy  image0.pt  intrinsics.pt  out.txt  package.xml  ros_node.py
h264_msgs/: CMakeLists.txt  package.xml
image_transport_tutorials/: CMakeLists.txt
image_visualization/: CMakeLists.txt  package.xml
insta_ros_driver/: CMakeLists.txt  package.xml
insta_ros_driver/include/: version.h
insta_ros_driver/include/camera/: camera.h  ins_types.h  photography_settings.h
insta_ros_driver/include/stream/: stream_delegate.h
insta_ros_driver/launch/: compress_to_raw.launch.py  full_launch.launch.py
insta_ros_driver/src/: h264_subscriber.cpp  insta_fisheye_publisher.cpp
lifelong_msgs/: CMakeLists.txt  package.xml
navigation_bringup/: CMakeLists.txt  package.xml
octomap_server2/: README.md
py_pubsub/: package.xml  setup.py
realsense_rtabmap_slam_bringup/: CMakeLists.txt  package.xml
robot_bringup/: CMakeLists.txt  package.xml
turtlebot_ekf/: CMakeLists.txt  package.xml
(+71 files in other folders)
